--- a/notebooks/redlining-33-spectral-indices.ipynb
+++ b/notebooks/redlining-33-spectral-indices.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "23c9c3f8",
    "metadata": {},
    "outputs": [],
@@ -74,17 +74,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "05a966ca",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x23e456c5a90>"
+       "<matplotlib.collections.QuadMesh at 0x71751c2db710>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "69327a87",
    "metadata": {
     "highlight": true
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "2e78ae61",
    "metadata": {},
    "outputs": [
@@ -149,17 +149,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "6648d8b0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x23e45916fd0>"
+       "<matplotlib.collections.QuadMesh at 0x7174f18ada10>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -186,7 +186,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "earth-analytics-python",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -200,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
