--- a/notebooks/redlining-30-overview.ipynb
+++ b/notebooks/redlining-30-overview.ipynb
@@ -2,6 +2,7 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "id": "350b0fec-0fcb-45cd-8534-7357d88b3611",
       "metadata": {},
       "source": [
         "# \n",
@@ -28,8 +29,8 @@
         "You can read more about redlining and data science in (Chapter 2 of Data\n",
         "Feminism ( D’Ignazio and Klein 2020)).\n",
         "\n",
-        "In this case study, you will download satellite-based **multispectral**\n",
-        "data for the City of Denver, and compare that to redlining maps and\n",
+        "In this case study,satellite-based **multispectral**\n",
+        "data for the City of Denver, and compared to redlining maps and\n",
         "results from the U.S. Census American Community Survey.\n",
         "\n",
         "D’Ignazio, Catherine, and Lauren Klein. 2020. “2. Collect, Analyze,\n",
@@ -39,17 +40,40 @@
         "Redlining in New Deal America.” In *American Panorama: An Atlas of\n",
         "United States History*, edited by Robert K Nelson and Edward L. Ayers.\n",
         "<https://dsl.richmond.edu/panorama/redlining.>"
-      ],
-      "id": "350b0fec-0fcb-45cd-8534-7357d88b3611"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "id": "d6a8a65f",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%%capture\n",
+        "%%bash\n",
+        "jupyter nbconvert redlining-30-overview.ipynb --to html"
+      ]
     }
   ],
-  "nbformat": 4,
-  "nbformat_minor": 5,
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "base",
       "language": "python",
       "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.6"
     }
-  }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
